# rust-renderer

./: Cargo.toml  LICENSE  README.md
examples/gui/: demo.rs  eframe.rs
res/: icosphere.gltf
res/avocado/: avocado.gltf
src/: bind_group.rs  bind_groups.rs  camera.rs  camera_controller.rs  lib.rs  main.rs  material.rs  mesh.rs  pipeline.rs  pipelines.rs  renderer.rs  shader.wgsl  texture.rs  vertex.rs
src/bind_groups/: camera_bind_group.rs  material_bind_group.rs  texture_bind_group.rs
src/pipelines/: mesh_pipeline.rs
