[package]
name = "rust-renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.28.0"
wgpu = "0.15.0"
pollster = "0.2.5"
bytemuck = { version = "1.13", features = [ "derive" ] }
image = "0.24.5"
nalgebra-glm = "0.18.0"
gltf = "1.1.0"
env_logger = "0.10.0"

[dev-dependencies]
eframe = "0.21.0"
egui = "0.21.0"
tracing-subscriber = "0.3.16"

[[example]]
name = "eframe"
path = "examples/gui/eframe.rs"
